kustomize/org-services/common/manifest-base/base-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: REPLACE_ME
  name: REPLACE_ME
  namespace: dev-php-hello
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: REPLACE_ME
