kustomize/org-services/common/manifest-base/base-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: REPLACE_ME
  name: REPLACE_ME
  namespace: dev-php-hello
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: REPLACE_ME
    weight: 100
